--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -607,6 +607,38 @@
     {
       "cell_type": "code",
       "source": [
+        "best_automl_model[1].estimators"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 45,
+          "data": {
+            "text/plain": "[('1',\n  Pipeline(memory=None,\n           steps=[('maxabsscaler', MaxAbsScaler(copy=True)),\n                  ('xgboostclassifier',\n                   XGBoostClassifier(base_score=0.5, booster='gbtree',\n                                     colsample_bylevel=1, colsample_bynode=1,\n                                     colsample_bytree=1, gamma=0,\n                                     learning_rate=0.1, max_delta_step=0,\n                                     max_depth=3, min_child_weight=1, missing=nan,\n                                     n_estimators=100, n_jobs=1, nthread=None,\n                                     objective='binary:logistic', random_state=0,\n                                     reg_alpha=0, reg_lambda=1,\n                                     scale_pos_weight=1, seed=None, silent=None,\n                                     subsample=1, tree_method='auto', verbose=-10,\n                                     verbosity=0))],\n           verbose=False)),\n ('0',\n  Pipeline(memory=None,\n           steps=[('maxabsscaler', MaxAbsScaler(copy=True)),\n                  ('lightgbmclassifier',\n                   LightGBMClassifier(boosting_type='gbdt', class_weight=None,\n                                      colsample_bytree=1.0,\n                                      importance_type='split', learning_rate=0.1,\n                                      max_depth=-1, min_child_samples=20,\n                                      min_child_weight=0.001, min_split_gain=0.0,\n                                      n_estimators=100, n_jobs=1, num_leaves=31,\n                                      objective=None, random_state=None,\n                                      reg_alpha=0.0, reg_lambda=0.0, silent=True,\n                                      subsample=1.0, subsample_for_bin=200000,\n                                      subsample_freq=0, verbose=-10))],\n           verbose=False)),\n ('26',\n  Pipeline(memory=None,\n           steps=[('sparsenormalizer',\n                   <azureml.automl.runtime.shared.model_wrappers.SparseNormalizer object at 0x7ff651f23518>),\n                  ('lightgbmclassifier',\n                   LightGBMClassifier(boosting_type='gbdt', class_weight=None,\n                                      colsample_bytree=0.99,\n                                      importance_type='split',\n                                      learning_rate=0.05789894736842106,\n                                      max_bin=240, max_depth=10,\n                                      min_child_samples=2182, min_child_weight=2,\n                                      min_split_gain=0.21052631578947367,\n                                      n_estimators=400, n_jobs=1, num_leaves=197,\n                                      objective=None, random_state=None,\n                                      reg_alpha=0.5789473684210527,\n                                      reg_lambda=0.21052631578947367, silent=True,\n                                      subsample=0.09947368421052633,\n                                      subsample_for_bin=200000, subsample_freq=0,\n                                      verbose=-10))],\n           verbose=False)),\n ('13',\n  Pipeline(memory=None,\n           steps=[('minmaxscaler', MinMaxScaler(copy=True, feature_range=(0, 1))),\n                  ('sgdclassifierwrapper',\n                   SGDClassifierWrapper(alpha=4.693930612244897,\n                                        class_weight='balanced', eta0=0.001,\n                                        fit_intercept=False,\n                                        l1_ratio=0.3877551020408163,\n                                        learning_rate='constant',\n                                        loss='squared_hinge', max_iter=1000,\n                                        n_jobs=1, penalty='none',\n                                        power_t=0.3333333333333333,\n                                        random_state=None, tol=0.001))],\n           verbose=False)),\n ('3',\n  Pipeline(memory=None,\n           steps=[('standardscalerwrapper',\n                   <azureml.automl.runtime.shared.model_wrappers.StandardScalerWrapper object at 0x7ff651f67fd0>),\n                  ('sgdclassifierwrapper',\n                   SGDClassifierWrapper(alpha=1.4286571428571428,\n                                        class_weight=None, eta0=0.01,\n                                        fit_intercept=True,\n                                        l1_ratio=0.7551020408163265,\n                                        learning_rate='constant', loss='log',\n                                        max_iter=1000, n_jobs=1, penalty='none',\n                                        power_t=0.4444444444444444,\n                                        random_state=None, tol=0.001))],\n           verbose=False)),\n ('5',\n  Pipeline(memory=None,\n           steps=[('standardscalerwrapper',\n                   <azureml.automl.runtime.shared.model_wrappers.StandardScalerWrapper object at 0x7ff651fc0a20>),\n                  ('sgdclassifierwrapper',\n                   SGDClassifierWrapper(alpha=3.0612938775510203,\n                                        class_weight='balanced', eta0=0.0001,\n                                        fit_intercept=True,\n                                        l1_ratio=0.8979591836734693,\n                                        learning_rate='constant',\n                                        loss='modified_huber', max_iter=1000,\n                                        n_jobs=1, penalty='none',\n                                        power_t=0.6666666666666666,\n                                        random_state=None, tol=0.01))],\n           verbose=False)),\n ('18',\n  Pipeline(memory=None,\n           steps=[('standardscalerwrapper',\n                   <azureml.automl.runtime.shared.model_wrappers.StandardScalerWrapper object at 0x7ff651f86fd0>),\n                  ('sgdclassifierwrapper',\n                   SGDClassifierWrapper(alpha=6.326567346938775,\n                                        class_weight='balanced', eta0=0.01,\n                                        fit_intercept=True,\n                                        l1_ratio=0.26530612244897955,\n                                        learning_rate='invscaling', loss='log',\n                                        max_iter=1000, n_jobs=1, penalty='none',\n                                        power_t=0.4444444444444444,\n                                        random_state=None, tol=0.01))],\n           verbose=False))]"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 45,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1605028877777
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "joblib.dump(best_automl_model, 'outputs/automl_model.joblib')"
       ],
       "outputs": [
